--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Businet Base Models.
 version: 0.9.1
 homepage: https://businet.com
 
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/Mopilani/businet_models
 
 environment:
   sdk: '>=2.19.1 <3.0.0'
@@ -11,14 +11,9 @@ environment:
 dependencies:
   hive: ^2.2.3
   http: ^0.13.5
-  # flutter_nexabase:
-  #   path: C://H/flutter_nexabase
   shelf: ^1.4.0
   shelf_router: ^1.1.3
   mongo_dart: ^0.8.2
-  # overlay_support: ^2.0.1
-  # esc_pos_utils: ^1.1.0
-  # esc_pos_printer: ^4.1.0
   path_provider: ^2.0.11
   image: ^4.0.15
   gbk_codec: ^0.4.0
