--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   shelf: ^1.4.0
   shelf_router: ^1.1.3
   mongo_dart: ^0.9.1
-  path_provider: ^2.0.11
+  # path_provider: ^2.0.11
   image: ^4.0.15
   gbk_codec: ^0.4.0
   hex: ^0.2.0
